<resources>
    <string name="app_name">PAM-Projekt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">Zaloguj</string>
    <string name="menu_logout">Wyloguj</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Zalogowano jako "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="go_to_login">Zaloguj</string>
    <string name="homeToSettings">Ustawienia</string>
    <string name="homeToLogin">Zaloguj</string>
    <string name="homeToBasket">Koszyk</string>
    <string name="homeToSearch">Wyszukaj</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="login">Login</string>
    <string name="ItemSearchTab">Wpisz nazwę urządzenia</string>
    <string name="logo">logo</string>
    <string name="kat_1">kat_1</string>
    <string name="kat_2">kat_2</string>
    <string name="konsole">konsole</string>
    <string name="kat_3">kat_3</string>
    <string name="komputery">komputery</string>
    <string name="kat_4">kat_4</string>
    <string name="podzespo_y">podzespoły</string>
    <string name="kat_5">kat_5</string>
    <string name="audio">audio</string>
    <string name="kat_6">kat_6</string>
    <string name="telewizory">telewizory</string>
    <string name="kat_7">kat_7</string>
    <string name="peryferia">peryferia</string>
    <string name="kat_8">kat_8</string>
    <string name="programy">programy</string>
    <string name="serviceHeader">Edytor rekordów</string>
    <string name="device">Device</string>
    <string name="company">Company</string>
    <string name="price">Price</string>
    <string name="detail">Detail</string>
    <string name="id">ID:</string>
    <string name="_0">0</string>
    <string name="przypisany_do">Przypisany do:</string>
    <string name="produkt">Produkt</string>
    <string name="firma">Firma</string>
    <string name="cena">Cena</string>
    <string name="opis">Opis</string>
    <string name="wyszukaj_id">Wyszukaj ID...</string>
    <string name="wyszukaj">Wyszukaj</string>
    <string name="dodaj_rekord">Dodaj rekord</string>
    <string name="gotoSerwis">Przywróć do Serwisu</string>
    <string name="gotoDetal">Przenieś do Detalu</string>
    <string name="formularz_zakupowy">Formularz Zakupowy</string>
    <string name="formularz_zakupowyv2">Formularz zakupowy</string>
    <string name="dane_zamawiaj_cego">Dane zamawiającego</string>
    <string name="imi">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="numer_telefonu">Numer telefonu</string>
    <string name="adres_e_mail">Adres e-mail</string>
    <string name="numer_karty">Numer Karty</string>
    <string name="data_wa_no_ci">Data ważności</string>
    <string name="kod_cvc">Kod CVC*</string>
    <string name="karta_p_atnicza">Karta płatnicza</string>
    <string name="got_wka">Gotówka</string>
    <string name="zakup_produkt">Zakup Produkt</string>
    <string name="w">"W "</string>
    <string name="zakup">Zakup</string>
    <string name="przejd_do_zakupu">Przejdź do zakupu</string>
    <string name="wpisz_kryteria_filtracji">Wpisz kryteria filtracji</string>

</resources>