<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMakeNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <!-- Button to navigate to FragmentLogin -->
            <Button
                android:id="@+id/homeToLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeToLogin"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/homeToSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeToSettings"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/homeToBasketButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeToBasket"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/homeToSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeToSearch"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
